<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Tabs Titles -->
    <string name="tt_About">About</string>
	<string name="tt_About_Credits">Credits</string>
    
	<!-- Elements -->
    <string name="app_name">SF Android</string>
    <string name="None"></string>
    <string name="Value">Search Key</string>
	<string name="Name">Name</string>
    <string name="Name2">Last Name</string>
    <string name="Save">Save</string>
    <string name="C_BPartner_ID">Business Partner</string>
    <string name="Description">Description</string>
    <string name="C_BP_Group_ID">Business Partner Group</string>
    <string name="C_BP_Location_ID">Location</string>
    <string name="DocumentNo">Document No</string>
	<string name="C_DocTypeTarget_ID">Document Type Target</string>
	<string name="DateOrdered">Date Ordered</string>
	<string name="C_BPartner_Location_ID">Business Partner Location</string>
	<string name="Bill_Location_ID">Bill Location</string>
	<string name="M_PriceList_ID">Price List</string>
	<string name="DatePromised">Date Promised</string>
	<string name="C_DocType_ID">Document Type</string>
	<string name="C_Activity_ID">Activity ABC</string>
	<string name="TotalLines">Total Lines</string>
	<string name="GrandTotal">Grand Total</string>
	<string name="Zero">0</string>
	<string name="PaymentRule">Payment Rule</string>
	<string name="C_PaymentTerm_ID">Payment Term</string>
	<string name="Text">Text</string>
	<string name="Qty">Quantity</string>
	<string name="QtyOrdered">Quantity Ordered</string>
	<string name="QtyInvoiced">Quantity Invoiced</string>
	<string name="QtyDelivered">Quantity Delivered</string>
	<string name="QtyReserved">Quantity Reserved</string>
	<string name="C_Order_ID">Sales Order</string>
	<string name="C_OrderLine_ID">Sales Order Line</string>
	<string name="M_Product_Category_ID">Product Category</string>
	<string name="InitSyncManual">Manual Synchronization</string>
	<string name="SynchronzeButtom">Synchronize</string>
	<string name="Upload">Upload</string>
	<string name="Download">Download</string>
	<string name="Changes">Changes</string>
	<string name="M_Inventory_ID">Fisical Inventory</string>
	<string name="XX_MB_CustomerInventory_ID">Customer Inventory</string>
	<string name="XX_MB_CustomerInventoryLine_ID">Customer Inventory Line</string>
	<string name="DateDoc">Document Date</string>
	<string name="IsActive">Active</string>
	<string name="XX_QtyOnStock">On Stock</string>	
	<string name="XX_QtyOnRack">On Rack</string>
	<string name="XX_QtyStock">Stock</string>	
	<string name="XX_QtyRack">Rack</string>
	<string name="Price">Price</string>
	<string name="LineNetAmt">Line Net Amount</string>
	<string name="SO_CreditLimit">Credit Limit</string>
	<string name="SO_CreditUsed">Credit Used</string>
	<string name="SO_CreditAvailable">Credit Available</string>
	<string name="Fax">Fax</string>
	<string name="Phone">Phone</string>
	<string name="Phone2">2nd Phone</string>
	<string name="Latitude">Latitude</string>
	<string name="Longitude">Longitude</string>
	<string name="IsBillTo">Is Invoice Address</string>
	<string name="IsShipTo">Is Ship Address</string>
	<string name="Region">Region</string>
	<string name="City">City</string>
	<string name="Address1">Address</string>
	<string name="Address2">Address 2</string>
	<string name="Address3">Address 3</string>
	<string name="Address4">Address 4</string>
	<string name="FirstSale">First Sale</string>
	<string name="FlatDiscount">Flat Discount</string>
	<string name="POReference">PO Reference</string>
	<string name="ValidFrom">Valid From</string>
	<string name="XX_MB_PlanningVisit_ID">Planning Visit</string>
	<string name="M_RMAType_ID">RMA Type</string>
	<string name="M_InOut_ID">Shipment</string>
	<string name="Help">Help</string>
	<string name="DocAction">Document Action</string>
	<string name="M_RMA_ID">Customer RMA</string>
	<string name="M_RMALine_ID">Customer RMA Line</string>
	<string name="XX_QtyReturn">Qty Return</string>
	<string name="Amt">Amount</string>
	<string name="DateVisit">Date Visit</string>
	<string name="OffCourse">Off Course</string>
	<string name="XX_MB_Visit_ID">Visit</string>
	<string name="XX_MB_VisitLine_ID">Visit Events</string>
	<string name="TimeOfEvent">Time of Event</string>
	<string name="XX_MB_EventType_ID">Event Type</string>
	<string name="XX_QtyDelivered">Delivered</string>
	<string name="C_Cash_ID">AR Receipt</string>
	<string name="StatementDate">Statement Date</string>
	<string name="C_Invoice_ID">Invoice</string>
	<string name="OpenAmt">Open Amount</string>
	<string name="ReferenceNo">Reference No</string>
	<string name="C_Bank_ID">Bank</string>
	<string name="Amount">Amount</string>
	<string name="CashType">Type</string>
	<string name="TenderType">Tender Type</string>
	<string name="RoutingNo">Routing No</string>
	<string name="AccountNo">Account No</string>
	<string name="CheckNo">Check No</string>
	<string name="CreditCardType">Credit Card</string>
	<string name="CreditCardNumber">Number</string>
	<string name="CreditCardExpMM">Exp. Month</string>
	<string name="CreditCardExpYY">Exp. Year</string>
	<string name="CreditCardVV">Verification Code</string>
	<string name="A_Name">Name</string>
	<string name="C_BankAccount_ID">Bank Account</string>
	<string name="PayAmt">Payment Amount</string>
	<string name="BeginningBalance">Beginning Balance</string>
	<string name="EndingBalance">Ending Balance</string>
	<string name="StatementDifference">Statement Difference</string>
	<string name="DepositAmt">Deposit Amount</string>
	<string name="C_CashLine_ID">Cash Line</string>
	<string name="V_CashAmt">Cash Amt</string>
	<string name="V_OtherAmt">Other Amt</string>
	<string name="V_DepositCashAmt">Deposit Cash Amt</string>
	<string name="V_DepositOtherAmt">Deposit Other Amt</string>
	<string name="V_EndingBalanceAmt">Ending Balance Amt</string>
	<string name="V_DifferenceAmt">Difference Amt</string>
	<string name="V_ForDepositAmt">For Deposit Amt</string>
	
	
	<string name="Language">Language</string>
	
	<string name="t_SelectOne">Select One Option</string>
	<string name="t_C_OrderLine_ID">Sales Order Lines</string>
	<string name="t_Deposit">Deposit</string>
	<string name="t_DepositAmt">Deposit Amount</string>
	<string name="t_DepositLine">Deposit Line</string>
	
	<string name="START_Sales_Order">Sales Order</string>
	<string name="START_AR_Receipt">AR Receipt</string>
	<string name="START_Making_Inventory">Making Inventory</string>
	<string name="START_Return_Material">Customer RMA</string>
	<string name="START_No_Sales_Reason">No Sales Reason</string>
	
	<string name="app_description" >This is a Application Sales Force Mobile for Android</string>
	<string name="app_version_name" >Version Name</string>
	<string name="app_version_code" >Version Code</string>
	<string name="app_permissions" >Permission</string>
	<string name="app_web_erp" >http://www.erpconsultoresyasociados.com</string>
	<string name="app_web_lubo" >http://www.lubosistemas.com.ve</string>
	
	<string name="app_phone1_lubo" >+58(212)9523824</string>
	<string name="app_phone2_lubo" >+58(212)9528563</string>
	<string name="app_phone3_lubo" >+58(412)2223824</string>
	<string name="app_phone4_lubo" >+50768423695</string>
	<string name="app_phone5_lubo" >+50763756018</string>
	
	<string name="app_phone1_erp" >+58(255)7114349</string>
	<string name="app_phone2_erp" >+58(412)0598465</string>
	<string name="app_phone3_erp" >+58(412)1741773</string>
	<string name="app_phone4_erp" >+58(424)5484908</string>
	<string name="app_phone5_erp" >+50768437413</string>
</resources>