<?xml version="1.0" encoding="utf-8"?>
<!--
/*************************************************************************************
 * Product: SFAndroid (Sales Force Mobile)                       		             *
 * This program is free software; you can redistribute it and/or modify it    		 *
 * under the terms version 2 of the GNU General Public License as published   		 *
 * by the Free Software Foundation. This program is distributed in the hope   		 *
 * that it will be useful, but WITHOUT ANY WARRANTY; without even the implied 		 *
 * warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.           		 *
 * See the GNU General Public License for more details.                       		 *
 * You should have received a copy of the GNU General Public License along    		 *
 * with this program; if not, write to the Free Software Foundation, Inc.,    		 *
 * 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.                     		 *
 * For the text or an alternative of this public license, you may reach us    		 *
 * Copyright (C) 2012-2012 E.R.P. Consultores y Asociados, S.A. All Rights Reserved. *
 * Contributor(s): Yamel Senih www.erpconsultoresyasociados.com				  		 *
 ************************************************************************************/
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
    	
    	<ImageView
        	android:id="@+id/img_logoLUBO"
        	android:layout_width="wrap_content"
        	android:layout_height="80dp"
        	android:layout_weight="1"
        	android:contentDescription="@string/None"
        	android:src="@drawable/logo_lubo" />
    	<LinearLayout
    		android:layout_width="fill_parent"
    		android:layout_height="80dp"
    		android:layout_weight="1"
    		android:orientation="vertical" >
    	
    	    <TextView
    	        android:id="@+id/tv_Phone"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_weight="1"
    	        android:gravity="right"
    	        android:maxLines="1"
    	        android:text="@string/app_phone1_lubo" />

			<TextView
			    android:id="@+id/tv_Phone1"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:gravity="right"
			    android:maxLines="1"
			    android:text="@string/app_phone2_lubo" />
			<TextView
    	        android:id="@+id/tv_Phone3"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_weight="1"
    	        android:gravity="right"
    	        android:maxLines="1"
    	        android:text="@string/app_phone3_lubo" />
			<TextView
    	        android:id="@+id/tv_Phone4"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_weight="1"
    	        android:gravity="right"
    	        android:maxLines="1"
    	        android:text="@string/app_phone4_lubo" />
			<TextView
    	        android:id="@+id/tv_Phone5"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_weight="1"
    	        android:gravity="right"
    	        android:maxLines="1"
    	        android:text="@string/app_phone5_lubo" />
				    	    	
		</LinearLayout>
    </LinearLayout>
	
   
    <Button
        android:id="@+id/butt_web_lubo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/app_web_lubo"
        android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
            
    	<ImageView
        	android:id="@+id/img_logoERP"
        	android:layout_width="wrap_content"
        	android:layout_height="80dp"
        	android:layout_weight="1"
        	android:contentDescription="@string/None"
        	android:src="@drawable/logo_erp" />
    	<LinearLayout
    		android:layout_width="fill_parent"
    		android:layout_height="80dp"
    		android:layout_weight="1"
    		android:orientation="vertical" >
    	
    	    <TextView
    	        android:id="@+id/tv_PhoneE"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_weight="1"
    	        android:gravity="right"
    	        android:maxLines="1"
    	        android:text="@string/app_phone1_erp" />

			<TextView
			    android:id="@+id/tv_PhoneE1"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:gravity="right"
			    android:maxLines="1"
			    android:text="@string/app_phone2_erp" />
			<TextView
    	        android:id="@+id/tv_PhoneE3"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_weight="1"
    	        android:gravity="right"
    	        android:maxLines="1"
    	        android:text="@string/app_phone3_erp" />
			<TextView
    	        android:id="@+id/tv_PhoneE4"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_weight="1"
    	        android:gravity="right"
    	        android:maxLines="1"
    	        android:text="@string/app_phone4_erp" />
			<TextView
    	        android:id="@+id/tv_Phone5"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_weight="1"
    	        android:gravity="right"
    	        android:maxLines="1"
    	        android:text="@string/app_phone5_lubo" />
				    	    	
		</LinearLayout>
    </LinearLayout>
       
    <Button
        android:id="@+id/butt_web_erp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/app_web_erp"
        android:textAppearance="?android:attr/textAppearanceSmall" />   

</LinearLayout>