<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/img_Sync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:contentDescription="@string/None"
        android:src="@drawable/download_h" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
	        android:id="@+id/tV_Name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Name"
	        android:maxLines="2"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tV_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/Description" />
    </LinearLayout>

</LinearLayout>