<?xml version="1.0" encoding="utf-8"?>
<!--
/*************************************************************************************
 * Product: SFAndroid (Sales Force Mobile)                       		             *
 * This program is free software; you can redistribute it and/or modify it    		 *
 * under the terms version 2 of the GNU General Public License as published   		 *
 * by the Free Software Foundation. This program is distributed in the hope   		 *
 * that it will be useful, but WITHOUT ANY WARRANTY; without even the implied 		 *
 * warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.           		 *
 * See the GNU General Public License for more details.                       		 *
 * You should have received a copy of the GNU General Public License along    		 *
 * with this program; if not, write to the Free Software Foundation, Inc.,    		 *
 * 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.                     		 *
 * For the text or an alternative of this public license, you may reach us    		 *
 * Copyright (C) 2012-2012 E.R.P. Consultores y Asociados, S.A. All Rights Reserved. *
 * Contributor(s): Yamel Senih www.erpconsultoresyasociados.com				  		 *
 ************************************************************************************/
 -->
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:baselineAligned="false" >
			
			<LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:orientation="vertical" >
			    <TextView
		            android:id="@+id/tv_DocumentNo"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:lines="1"
		            android:text="@string/DocumentNo" />    
	
				<EditText
				    android:id="@+id/et_DocumentNo"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:inputType="text"
				    android:focusable="false"
				    android:focusableInTouchMode="false"
				    android:clickable="false"
				    android:text="@string/msg_New" />
				    
			</LinearLayout>
			<LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:orientation="vertical" >
				
			    <TextView
		            android:id="@+id/tv_C_DocTypeTarget_ID"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:lines="1"
		            android:text="@string/C_DocTypeTarget_ID" />    
	
				<org.appd.view.custom.Cust_Spinner
				    android:id="@+id/sp_C_DocTypeTarget_ID"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" />
					            
			</LinearLayout>
		</LinearLayout>
		<!-- Siguinete Fila (Fecha) -->
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:baselineAligned="false" >
			
			<LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:orientation="vertical" >
			    <TextView
		            android:id="@+id/tv_DateOrdered"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:lines="1"
		            android:text="@string/DateOrdered" />    
	
				<org.appd.view.custom.Cust_DateBox
				    android:id="@+id/cd_DateOrdered"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" />
				    
			</LinearLayout>
			<LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:orientation="vertical" >
				
			    <TextView
		            android:id="@+id/tv_DatePromised"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:lines="1"
		            android:text="@string/DatePromised" />    
	
				<org.appd.view.custom.Cust_DateBox
				    android:id="@+id/cd_DatePromised"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" />
					            
			</LinearLayout>
		</LinearLayout>
	    
	    <!-- PO Reference -->
		<TextView
			android:id="@+id/tv_POReference"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:lines="1"
		    android:text="@string/POReference" />    
	
		<EditText
			android:id="@+id/et_POReference"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:hint="@string/POReference" />	    
	    
	    
		<!-- Socio de Negocio y Lista de Precio -->
		
		<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:baselineAligned="false" 
	        android:orientation="vertical" >
			<TextView
		    	android:id="@+id/tv_C_BPartner_ID"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:lines="1"
		        android:text="@string/C_BPartner_ID" />    
			<org.appd.view.custom.Cust_Spinner
				android:id="@+id/sp_C_BPartner_ID"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />
		</LinearLayout>
		<!-- Lista de Precio -->
		<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:baselineAligned="false"
	        android:orientation="vertical" >
			<TextView
		    	android:id="@+id/tv_M_PriceList_ID"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:lines="1"
		        android:text="@string/M_PriceList_ID" />    
	
			<org.appd.view.custom.Cust_Spinner
				android:id="@+id/sp_M_PriceList_ID"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />			    
		</LinearLayout>
	    <!-- Dirección de Facturación -->
	
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
				
			<TextView
		   		android:id="@+id/tv_Bill_Location_ID"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:lines="1"
		        android:text="@string/Bill_Location_ID" />    
	
			<org.appd.view.custom.Cust_Spinner
				android:id="@+id/sp_Bill_Location_ID"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />
					            
		</LinearLayout>
		<!-- Dirección de Entrega -->
	
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
				
			<TextView
		   		android:id="@+id/tv_C_BPartner_Location_ID"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:lines="1"
		        android:text="@string/C_BPartner_Location_ID" />    
	
			<org.appd.view.custom.Cust_Spinner
				android:id="@+id/sp_C_BPartner_Location_ID"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />
					            
		</LinearLayout>

		<!-- Descripción del Pedido -->
	
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
				
		<TextView
    	    android:id="@+id/tv_Description"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/Description" />

    	<EditText
    	    android:id="@+id/et_Description"
    	    android:layout_width="match_parent"
    	    android:layout_height="match_parent"
    	    android:hint="@string/Description"
    	    android:inputType="textMultiLine|textAutoCorrect" />
				            
		</LinearLayout>
		<!-- Button Doc Action -->
		<org.appd.view.custom.Cust_ButtonDocAction
			    android:id="@+id/cds_DocStatus"
			    android:layout_width="match_parent"
				android:layout_height="match_parent" />
		<!-- Total Lines y Grand Total -->		
		<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:baselineAligned="false" >
			
			<LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:orientation="vertical" >
			    <TextView
		            android:id="@+id/tv_TotalLines"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:lines="1"
		            android:text="@string/TotalLines" />    
	
				<EditText
				    android:id="@+id/et_TotalLines"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:inputType="numberSigned"
				    android:gravity="right"
				    android:focusable="false"
				    android:focusableInTouchMode="false"
				    android:clickable="false"
				    android:text="@string/Zero" />
				    
			</LinearLayout>
			<LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:orientation="vertical" >
				
				<TextView
		            android:id="@+id/tv_GrandTotal"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:lines="1"
		            android:text="@string/GrandTotal" />    
	
				<EditText
				    android:id="@+id/et_GrandTotal"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:inputType="numberSigned"
				    android:gravity="right"
				    android:focusable="false"
				    android:focusableInTouchMode="false"
				    android:clickable="false"
				    android:text="@string/Zero" />
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</ScrollView>